@@ -32,7 +32,7 @@ dnl
 dnl defines: LIBECASOUND_VERSION, LIBECASOUNDC_VERSION, LIBKVUTILS_VERSION
 dnl ---
 
-LIBECASOUND_VERSION=19
+LIBECASOUND_VERSION=20
 LIBECASOUND_VERSION_AGE=0
 LIBECASOUNDC_VERSION=1
 LIBECASOUNDC_VERSION_AGE=0
